# fishersci-loader

./: Cargo.toml  README.md  fisherscientific-2016-chemical-catalog.txt
src/: main.rs
