[package]
name = "fishersci-loader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.38"
meilisearch-sdk = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
fantoccini = "0.17.4"
tokio = { version = "1", features = [ "full" ] }



